--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "dotenv": "^17.2.0",
-    "express": "^4.18.2",
-    "mongodb": "^6.17.0"
+    "express": "^4.18.2"
   }
 }
