--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "mongodb": "^6.17.0"
+    "mongodb": "^6.17.0",
+    "papaparse": "^5.5.3",
+    "xlsx": "^0.18.5"
   }
 }
